# pipe-research

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
pipeline/: evaluate.py  prepare.py  train.py
scripts/: 1_exp_normalization.py  2_exp_supervision.py  3_exp_window_size.py  4_exp_position_invariance.py  5_exp_sharp.py
sharp_baseline/: README.md  __init__.py  adapter.py  config.py  doppler.py  eval_zeroshot.py  model.py  train.py
src/: cache.py  classifier.py  data.py  encoder.py  losses.py  split.py  training.py
